syntax = "proto3";

package com.westboy.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.westboy.namenode.rpc.service";
option java_outer_classname = "NameNodeServer";

import "NameNodeRpcModel.proto";

service NameNodeService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc mkdir(MkdirRequest) returns (MkdirResponse);
  rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
  rpc fetchEditlog(FetchEditlogRequest) returns (FetchEditlogResponse);
  rpc updateCheckpointTxid(UpdateCheckpointTxidRequest) returns (UpdateCheckpointTxidResponse);
  rpc create(CreateFileRequest) returns (CreateFileResponse);
  rpc allocateDataNode(AllocateDataNodesRequest) returns (AllocateDataNodesResponse);
  rpc reallocateDataNode(ReallocateDataNodeRequest) returns (ReallocateDataNodeResponse);
  rpc reportStorageInfo(ReportStorageInfoRequest) returns (ReportStorageInfoResponse);
  rpc reportFileInfo(ReportFileInfoRequest) returns (ReportFileInfoResponse);
  rpc chooseDataNode(ChooseDataNodeRequest) returns (ChooseDataNodeResponse);
  rpc rebalance(RebalanceRequest) returns (RebalanceResponse);
}

